--- a/src/main/resources/databaseConfiguration.properties
+++ b/src/main/resources/databaseConfiguration.properties
@@ -2,6 +2,6 @@ driverClassName = com.mysql.jdbc.Driver
 url = jdbc:mysql://localhost:3306/admitere_ucv?autoReconnect=true
 username = root
 password = root
-hibernate.hbm2ddl.auto = validate
+hibernate.hbm2ddl.auto = update
 hibernate.format_sql = true
 show_sql = true
